DFR-2107: confidential document model